# sfdob

./: .gitignore  CMakeLists.txt  main.cpp
data/: etalon_roi.txt  roi.txt
include/: Image.hpp  Process.hpp  ROI.cpp  ROI.hpp  image_io.hpp  preprocessor.hpp  saveImagePNG.hpp  types.hpp
src/: image.cpp  image_io.cpp  main.cpp  preprocessor.cpp
src/core/: Process.cpp  Process.h  Process.hpp  ProcessingPipeline.cpp  ProcessingPipeline.h
src/steps/: DefectGrouper.cpp  DefectGrouper.h  PointDetector.cpp  PointDetector.h  PointDetector.hpp  Preprocess.cpp  Preprocess.h  Preprocess.hpp  ProcessingStep.h
src/utils/: Config.h  Config.hpp  Image.cpp  Image.h  Image.hpp  Profiler.hpp  Types.cpp  Types.h  Types.hpp
